# games101

./: .gitignore  CMakeLists.txt
Assignment1/src/: CMakeLists.txt  main.cpp
Assignment2/src/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
